fix (ReviewPage): Align review overview with reviews on desktop screens

--- a/assets/styles/refresh/components/_review-overview.scss
+++ b/assets/styles/refresh/components/_review-overview.scss
@@ -8,7 +8,6 @@
   box-shadow: 2px 4px 28px rgba(0, 0, 0, 0.08);
   padding: 48px;
   width: 100%;
-  margin-top: 2rem;
 
   &__stars {
     margin-top: 24px;
